--- a/webapp/index.html
+++ b/webapp/index.html
@@ -27,8 +27,11 @@
   </div>
   <p class="p-container">
     <span>Forgot password ?</span>
+    
+    </br><span>Register</span>
     <input type="submit" name="go" id="go" value="Log in">
   </p>
+  
 </form>
 
 </body>
